--- a/pseudo_scene/src/main/resources/application.properties
+++ b/pseudo_scene/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.application.name=pseudo_scene
+
+springdoc.api-docs.path=/api-docs
+springdoc.show-actuator=true
+#springdoc.use-management-port=true
+springdoc.swagger-ui.path=/swagger-ui-custom.html
