added post stages to jenkinsfile

--- a/pseudo_scene/Jenkinsfile
+++ b/pseudo_scene/Jenkinsfile
@@ -9,8 +9,28 @@
 	stages {
 		stage("build") {
 			steps {
-				 sh 'mvn -f pseudo_scene/pom.xml clean install'
+				 sh 'mvn -f pseudo_scene/pom.xml clean'
 			}
+			
+			post {
+                success {
+                    echo "Now Archiving the Artifacts....."
+                    archiveArtifacts artifacts: '**/*.jar'
+                }
+            }
+			
+		}
+		
+		stage("test") {
+			steps {
+				 sh 'mvn -f pseudo_scene/pom.xml install'
+			}
+			
+			post {
+                always {
+                    junit 'pseudo_scene/target/surefire-reports/*.xml'
+                }
+            }
 		}
 		 
 	}   
