--- a/pseudo_scene/Jenkinsfile
+++ b/pseudo_scene/Jenkinsfile
@@ -20,5 +20,13 @@
 			}
 		}
 		 
+		post {
+			failure {
+			  // notify users when the Pipeline fails
+				mail to: 'dhfingerstyle@gmail.com',
+				subject: "Failed Pipeline: ${currentBuild.fullDisplayName}",
+				body: "Something is wrong with ${env.BUILD_URL}"
+			}
+		}
 	}   
 }
