added deleting workspace before building

--- a/pseudo_scene/Jenkinsfile
+++ b/pseudo_scene/Jenkinsfile
@@ -7,6 +7,11 @@
 	}
 
 	stages {
+		stage("delete workspace before build starts") {
+			echo 'Deleting workspace'
+			deleteDir()
+		}
+
 		stage("build") {
 			steps {
 				 sh 'mvn -f pseudo_scene/pom.xml clean'
