fixed path in Jenkins to docker

--- a/pseudo_scene/Jenkinsfile
+++ b/pseudo_scene/Jenkinsfile
@@ -24,7 +24,7 @@
 		stage("create docker image") {
 			steps {
 				echo " ====== start building image ===== "
-					sh 'docker build .'
+					sh 'docker build pseudo_scene/.'
 
 			}
 		}
