--- a/pseudo_scene/Dockerfile
+++ b/pseudo_scene/Dockerfile
@@ -1,5 +1,6 @@
-FROM anapsix/alpine-java
+FROM openjdk:19
 EXPOSE 8888
 #ADD target/pseudo_scene.jar pseudo_scene.jar
-COPY /target/pseudo_scene.jar /home/pseudo_scene.jar
+COPY /target/ /tmp
+WORKDIR /tmp
 ENTRYPOINT ["java", "-jar", "/pseudo_scene.jar"]
