--- a/pseudo_scene/Jenkinsfile
+++ b/pseudo_scene/Jenkinsfile
@@ -8,7 +8,7 @@ pipeline {
 		stage("install maven") {
 			agent {
 				docker {
-					image 'maven:3.9.6
+					image 'maven:3.9.6'
 				}	
 			}
 			steps {
