--- a/pseudo_scene/Jenkinsfile
+++ b/pseudo_scene/Jenkinsfile
@@ -11,12 +11,16 @@ pipeline {
 					image 'maven:3.9.6'
 				}	
 			}
+		}
+	
+			
+		stage("build") {
 			steps {
 				 sh 'mvn -f pseudo_scene/pom.xml clean'
 			}
 			
 		}
-		
+	
 		stage("test") {
 			steps {
 				 sh 'mvn -f pseudo_scene/pom.xml install'
