--- a/pseudo_scene/Jenkinsfile
+++ b/pseudo_scene/Jenkinsfile
@@ -9,7 +9,7 @@ pipeline {
                     def dockerfilePath = 'Dockerfile'
 
                     // Build the Docker image using the Dockerfile
-                    def dockerImage = docker.build('maven:3.8.4-openjdk-19' -f ' + dockerfilePath + ' .')
+                    def dockerImage = docker.build('maven:3.8.4-openjdk-19', '-f ' + dockerfilePath + ' .')
 
                     // Push the Docker image to a registry (optional)
                     dockerImage.push('maven:3.8.4-openjdk-19:latest')
