--- a/pseudo_scene/Jenkinsfile
+++ b/pseudo_scene/Jenkinsfile
@@ -6,7 +6,7 @@ pipeline {
             steps {
                 script {
                     // Define the Dockerfile location
-                    def dockerfilePath = 'Dockerfile'
+                    def dockerfilePath = 'project_upprpo/Dockerfile'
 
                     // Build the Docker image using the Dockerfile
                     def dockerImage = docker.build('maven:3.8.4-openjdk-19', '-f ' + dockerfilePath + ' .')
