--- a/pseudo_scene/Jenkinsfile
+++ b/pseudo_scene/Jenkinsfile
@@ -2,7 +2,7 @@ pipeline {
     agent any
 	
 tools {
-	  'org.jenkinsci.plugins.docker.commons.tools.DockerTool' 'docker'
+	  'org.jenkinsci.plugins.docker.commons.tools.DockerTool' 'Docker'
 }
     stages {
         stage('Build Docker Image') {
