added missed ' in jenk

--- a/pseudo_scene/Jenkinsfile
+++ b/pseudo_scene/Jenkinsfile
@@ -25,7 +25,7 @@ tools {
                     def dockerfilePath = 'Dockerfile'
 
                     // Build the Docker image using the Dockerfile
-                    def dockerImage = docker.build(''my-maven-image:latest, '-f ' + dockerfilePath + ' .')
+                    def dockerImage = docker.build('my-maven-image:latest', '-f ' + dockerfilePath + ' .')
                     
 			
 		    // Push the Docker image to a registry (optional)
