--- a/pseudo_scene/Jenkinsfile
+++ b/pseudo_scene/Jenkinsfile
@@ -24,9 +24,8 @@ tools {
                     // Define the Dockerfile location
                     def dockerfilePath = 'Dockerfile'
 			
-			def mymavenimage = 'maven:3.9.6-eclipse-temurin-17-alpine'
                     // Build the Docker image using the Dockerfile
-                    def dockerImage = docker.build('mymavenimage', '-f ' + dockerfilePath + ' .')
+                    def dockerImage = docker.build('maven:3.9.6-eclipse-temurin-17-alpine', '-f ' + dockerfilePath + ' .')
                     
 			
 		    // Push the Docker image to a registry (optional)
