--- a/pseudo_scene/Jenkinsfile
+++ b/pseudo_scene/Jenkinsfile
@@ -26,7 +26,13 @@ tools {
 			
                     // Build the Docker image using the Dockerfile
                     def dockerImage = docker.build('maven:3.9.6-eclipse-temurin-17-alpine', '-f ' + dockerfilePath + ' .')
-                    
+                  
+def imageName = 'maven:3.9.6-eclipse-temurin-17-alpine' 
+                    def validImageName = imageName.replaceAll(/[^a-zA-Z0-9_-]/, '-') // Replace invalid characters with hyphens
+                    dockerImage.tag(validImageName)
+                    dockerImage.push(validImageName)
+
+
 			
 		    // Push the Docker image to a registry (optional)
                     dockerImage.push('maven:3.9.6-eclipse-temurin-17-alpine')
