--- a/pseudo_scene/Jenkinsfile
+++ b/pseudo_scene/Jenkinsfile
@@ -1,41 +1,36 @@
 pipeline {
     agent any
-	
+
 tools {
-	maven 'maven'
-	jdk 'my_java19'
+    maven 'maven'
+    jdk 'my_java19'
 }
     stages {
-	stage("build") {
-		steps {
-			 sh 'mvn -f pseudo_scene/pom.xml clean'
-		}
-	}	
-		
-	stage("test") {
-		steps {
-			 sh 'mvn -f pseudo_scene/pom.xml install'
-		}
-	}
+    stage("build") {
+        steps {
+             sh 'mvn -f pseudo_scene/pom.xml clean'
+        }
+    }
+
+    stage("test") {
+        steps {
+             sh 'mvn -f pseudo_scene/pom.xml install'
+        }
+    }
 
         stage('Build Docker Image') {
             steps {
                 script {
                     // Define the Dockerfile location
                     def dockerfilePath = 'Dockerfile'
-			
+
                     // Build the Docker image using the Dockerfile
                     def dockerImage = docker.build('maven:3.9.6-eclipse-temurin-17-alpine', '-f ' + dockerfilePath + ' .')
-                  
-def imageName = 'maven:3.9.6-eclipse-temurin-17-alpine' 
+
+                    def imageName = 'maven:3.9.6-eclipse-temurin-17-alpine'
                     def validImageName = imageName.replaceAll(/[^a-zA-Z0-9_-]/, '-') // Replace invalid characters with hyphens
                     dockerImage.tag(validImageName)
-                    dockerImage.push(validImageName)
-
-
-			
-		    // Push the Docker image to a registry (optional)
-                    dockerImage.push('maven:3.9.6-eclipse-temurin-17-alpine')
+                    dockerImage.push('daryaevd/' + validImageName)
                 }
             }
         }
@@ -50,4 +45,3 @@ def imageName = 'maven:3.9.6-eclipse-temurin-17-alpine'
         }
     }
 }
-
