--- a/pseudo_scene/Jenkinsfile
+++ b/pseudo_scene/Jenkinsfile
@@ -29,8 +29,17 @@ tools {
 
                     def imageName = 'maven:3.9.6-eclipse-temurin-17-alpine'
                     def validImageName = imageName.replaceAll(/[^a-zA-Z0-9_-]/, '-') // Replace invalid characters with hyphens
-                    dockerImage.tag(validImageName)
-                    dockerImage.push('daryaevd/' + validImageName)
+
+	// Tag the Docker image with the repository name and 'latest' tag
+dockerImage.tag("daryaevd/${validImageName}", "latest")
+
+// Push the Docker image to Docker Hub
+dockerImage.push("daryaevd/${validImageName}", "latest")
+
+
+
+//                    dockerImage.tag(validImageName)
+                    //dockerImage.push('daryaevd/' + validImageName)
                 }
             }
         }
