--- a/pseudo_scene/Jenkinsfile
+++ b/pseudo_scene/Jenkinsfile
@@ -25,7 +25,7 @@ tools {
                     def dockerfilePath = 'Dockerfile'
 
                     // Build the Docker image using the Dockerfile
-                    def dockerImage = docker.build('daryaevd/maven:3.9.6-eclipse-temurin-17-alpine', '-f ' + dockerfilePath + ' .')
+//                    def dockerImage = docker.build('daryaevd/maven:3.9.6-eclipse-temurin-17-alpine', '-f ' + dockerfilePath + ' .')
 
                     def imageName = 'maven:3.9.6-eclipse-temurin-17-alpine'
                     def validImageName = imageName.replaceAll(/[^a-zA-Z0-9_-]/, '-') // Replace invalid characters with hyphens
