--- a/pseudo_scene/Jenkinsfile
+++ b/pseudo_scene/Jenkinsfile
@@ -31,8 +31,9 @@ tools {
                     def validImageName = imageName.replaceAll(/[^a-zA-Z0-9_-]/, '-') // Replace invalid characters with hyphens
 
 	// Tag the Docker image with the repository name and 'latest' tag
-dockerImage.tag("daryaevd/${validImageName}", "latest")
+//dockerImage.tag("daryaevd/${validImageName}", "latest")
 
+dockerImage.tag("daryaevd/${validImageName}:latest") 
 // Push the Docker image to Docker Hub
 dockerImage.push("daryaevd/${validImageName}", "latest")
 
