--- a/pseudo_scene/Jenkinsfile
+++ b/pseudo_scene/Jenkinsfile
@@ -22,14 +22,15 @@ pipeline {
         stage('Build Docker Image') {
             steps {
                 script {
-                    // Define the Dockerfile location
                     def dockerfilePath = 'Dockerfile'
 
                     // Build the Docker image using the Dockerfile
-                    def dockerImage = docker.build('maven:3.9.6-eclipse-temurin-17-alpine', '-f ' + dockerfilePath + ' .')
+                    //def dockerImage = docker.build('maven:3.9.6-eclipse-temurin-17-alpine', '-f ' + dockerfilePath + ' .')
 
                     def imageName = 'maven:3.9.6-eclipse-temurin-17-alpine'
                     def validImageName = imageName.replaceAll(/[^a-zA-Z0-9_-]/, '-') // Replace invalid characters with hyphens
+			
+                    def dockerImage = docker.build(validImageName, '-f' + dockerfilePath + ' .')
 
                     // Tag the Docker image with the repository name and 'latest' tag
                     dockerImage.tag("daryaevd/${validImageName}:latest")
